.happypack/s--411098525
SyntaxError: Unexpected token (2:19)

[0m [90m 1 | [39m[90m// $('.top-left').notify('success', 'okkkkkkkkkkkkkkkk');[39m
[31m[1m>[22m[39m[90m 2 | [39m[36mimport[39m notify from [36mimport[39m [32m'common/notify'[39m[33m;[39m
 [90m   | [39m                   [31m[1m^[22m[39m
 [90m 3 | [39m
 [90m 4 | [39mconsole[33m.[39mlog(notify)[33m;[39m[0m

Error
    at transpile (/var/www/zstu_xyb/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/var/www/zstu_xyb/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/var/www/zstu_xyb/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/var/www/zstu_xyb/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/var/www/zstu_xyb/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/var/www/zstu_xyb/node_modules/happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/var/www/zstu_xyb/node_modules/happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/var/www/zstu_xyb/node_modules/happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/var/www/zstu_xyb/node_modules/happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/var/www/zstu_xyb/node_modules/webpack/node_modules/webpack-core/lib/NormalModuleMixin.js:155:71)